deploy/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server
spec:
  rules:
    - host: www.172.17.0.2.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: server
              servicePort: 8080
